// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Home Page matches snapshot when no posts are found 1`] = `
<DocumentFragment>
  <div
    class="container mx-auto px-5"
  >
    <section
      class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12"
    >
      <h1
        class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8"
      >
        Blog de TDW.
      </h1>
      <h2
        class="text-center md:text-left text-lg mt-5 md:pl-8"
      >
        Aplicação de exemplo para o MP1 com: 
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://nextjs.org/"
        >
          Next.js
        </a>
         e 
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://www.contentful.com"
        >
          Contentful
        </a>
        .
      </h2>
    </section>
    <p>
      No posts found. Please check your Contentful configuration.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Home Page matches snapshot when posts are available 1`] = `
<DocumentFragment>
  <div
    class="container mx-auto px-5"
  >
    <section
      class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12"
    >
      <h1
        class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8"
      >
        Blog de TDW.
      </h1>
      <h2
        class="text-center md:text-left text-lg mt-5 md:pl-8"
      >
        Aplicação de exemplo para o MP1 com: 
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://nextjs.org/"
        >
          Next.js
        </a>
         e 
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://www.contentful.com"
        >
          Contentful
        </a>
        .
      </h2>
    </section>
    <section>
      <div
        class="mb-8 md:mb-16"
      >
        <img
          alt="Test Hero Post"
          data-testid="cover-image"
          src="/test-hero-image.jpg"
        />
      </div>
      <div
        class="md:grid md:grid-cols-2 md:gap-x-16 lg:gap-x-8 mb-20 md:mb-28"
      >
        <div>
          <h3
            class="mb-4 text-4xl lg:text-6xl leading-tight"
          >
            <a
              class="hover:underline"
              href="/posts/test-hero-post"
            >
              Test Hero Post
            </a>
          </h3>
          <div
            class="mb-4 md:mb-0 text-lg"
          >
            <time
              datetime="2023-01-01"
            >
              Mocked: 2023-01-01
            </time>
          </div>
        </div>
        <div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            This is a test hero post excerpt
          </p>
          <div
            data-testid="avatar"
          >
            <img
              alt="Test Author"
              src="/test-avatar.jpg"
            />
            <span>
              Test Author
            </span>
          </div>
        </div>
      </div>
    </section>
    <div
      data-testid="more-stories"
    >
      <div>
        Test Post 2
      </div>
    </div>
  </div>
</DocumentFragment>
`;
